mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/api: "true"
        io.kompose.service: mysql
    spec:
      containers:
      - args:
        - --default-authentication-plugin=mysql_native_password
        image: mysql:8
        imagePullPolicy: ""
        name: mysql
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: mysql-claim0
        persistentVolumeClaim:
          claimName: mysql-claim0
status: {}
