node-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: node-api
  name: node-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node-api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/api: "true"
        io.kompose.service: node-api
    spec:
      containers:
      - args:
        - bash
        - -c
        - npm run dev
        image: xmatheuslopes/node-api:0.0.1
        imagePullPolicy: ""
        name: node-api
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
